tests/ui/tuple/tuple-variant-written-as-empty-struct-variant.stderr
error[E0769]: tuple variant `S` written as struct variant
  --> $DIR/tuple-variant-written-as-empty-struct-variant.rs:5:9
   |
LL |     let S {} = S(0);
   |         ^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL -     let S {} = S(0);
LL +     let S(_) = S(0);
   |

error[E0769]: tuple variant `E::V` written as struct variant
  --> $DIR/tuple-variant-written-as-empty-struct-variant.rs:6:9
   |
LL |     let E::V {} = E::V(0);
   |         ^^^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL -     let E::V {} = E::V(0);
LL +     let E::V(_) = E::V(0);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0769`.
